--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@
 }
 
 .ending-block {
-  background-color: red;
+  background-color: purple;
 
 
 }
@@ -36,7 +36,7 @@
 }
 
 .c1 {
-  background-color: black;
+  background-color: green;
 }
 
 .c2,
