--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 .grid {
-  margin: 15%;
+  margin: 18%;
   flex-wrap: wrap;
   text-align: center;
   border: 2px solid;
@@ -36,7 +36,7 @@
 }
 
 .c1 {
-  background-color: green;
+  background-color: blue;
 }
 
 .c2,
